fix: Add mozilla only custom scrollbars color

--- a/src/components/HorizontalScroller.module.scss
+++ b/src/components/HorizontalScroller.module.scss
@@ -112,6 +112,11 @@
 
     ::-webkit-scrollbar-thumb {
         -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-        background: #393737;
+        background: #8195A2;
+    }
+
+    :-moz-read-only {
+        scrollbar-width: thin;
+        scrollbar-color: #8195A2 transparent;
     }
 }
